src/objects/Authorized_Products__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Authorized Products</relationshipLabel>
        <relationshipName>Authorized_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Commission_Rate__c</fullName>
        <label>Commission Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exception_Notes__c</fullName>
        <label>Exception/Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Authorized Product</label>
    <nameField>
        <label>Authorized Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Authorized Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>